# pointsVisualizer

./: CMakeLists.txt  README.md  main.cpp  pointsVisualizer.py
headers/: func.h  includes.h  point.h
inputs/: planes.txt
outputs/: points_wrong.txt
sources/: func.cpp  point.cpp
